--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <link rel="stylesheet" href="styles.css" />
     <title>New Year New Mission</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h3 class="banner-title">Happy New Year</h3>
+      <h1 class="banner-description">New Year Party <br />Celebration</h1>
+    </header>
+  </body>
 </html>
