--- a/index.html
+++ b/index.html
@@ -11,5 +11,32 @@
       <h3 class="banner-title">Happy New Year</h3>
       <h1 class="banner-description">New Year Party <br />Celebration</h1>
     </header>
+    <main>
+      <section class="offer-section">
+        <h1 class="offer-title">65% OFF</h1>
+        <h6 class="offer-des1">OUR HOLIDAY DEALS ARE BETTER</h6>
+        <h3 class="offer-des2">ALL CATEGORIES</h3>
+        <img
+          class="offer-image"
+          src="Resources/New Year Photo.png"
+          alt="Happy new year"
+        />
+      </section>
+      <section class="party-section">
+        <div class="party-text">
+          <h1 class="party-title">
+            Welcome to <br />
+            midnight party
+          </h1>
+          <p class="party-des">
+            Ring in the New Year with us! Join our midnight celebration filled
+            with music, laughter, and cheer. Let's welcome 2024 together. Don't
+            miss the unforgettable moments. See you there!
+          </p>
+          <button class="btn-join">JOIN NOW</button>
+        </div>
+        <img class="img-2024" src="Resources/Group 70.png" alt="2024" />
+      </section>
+    </main>
   </body>
 </html>
