--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         </div>
         <img class="img-2024" src="Resources/Group 70.png" alt="2024" />
       </section>
+      <section class="party-details">
+        <p class="detail-info">
+          <span class="detail-title"> Place: </span> New Park Hotel <br />
+          <span class="detail-title"> Date: </span> 31 December Night 2023
+          <br />
+          <span class="detail-title"> Time: </span> Evening 7.30 pm to 12.30 am
+        </p>
+        <button class="btn-join">JOIN NOW</button>
+      </section>
     </main>
   </body>
 </html>
