added new offer section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,37 @@
           <br />
           <span class="detail-title"> Time: </span> Evening 7.30 pm to 12.30 am
         </p>
-        <button class="btn-join">JOIN NOW</button>
+        <button class="btn-join btn-join-details">JOIN NOW</button>
+      </section>
+
+      <!-- New offer section -->
+      <section class="new-offer">
+        <div class="new-offer-context">
+          <h6 class="new-offer-title">NEW BEST OFFER</h6>
+          <h3 class="new-offer-details">Coming Soon</h3>
+          <p class="new-offer-des">
+            Celebrate the New Year with special offers! Embrace 2024 with
+            exclusive discounts and exciting deals. Start the year with savings
+            and joy. Don't miss out on our limited-time offers!
+          </p>
+        </div>
+        <img
+          class="new-offer-image"
+          src="Resources/Ellipse 1.png"
+          alt="People are celebrating the New Year"
+        />
+        <div class="new-offer-celebration">
+          <h3 class="new-offer-celeb-title">2024</h3>
+          <p class="new-offer-celeb-des">
+            Wishing our valued customers a joyful New Year filled with success,
+            prosperity, and moments to cherish. Thank you for choosing us!
+          </p>
+          <img
+            class="hny-sticker"
+            src="Resources/Group 96.png"
+            alt="Happy new year"
+          />
+        </div>
       </section>
     </main>
   </body>
