added holiday sale section

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       </section>
       <section class="party-details">
         <p class="detail-info">
-          <span class="detail-title"> Place: </span> New Park Hotel <br />
-          <span class="detail-title"> Date: </span> 31 December Night 2023
+          <span class="red-text"> Place: </span> New Park Hotel <br />
+          <span class="red-text"> Date: </span> 31 December Night 2023
           <br />
-          <span class="detail-title"> Time: </span> Evening 7.30 pm to 12.30 am
+          <span class="red-text"> Time: </span> Evening 7.30 pm to 12.30 am
         </p>
         <button class="btn-join btn-join-details">JOIN NOW</button>
       </section>
@@ -75,6 +75,30 @@
             alt="Happy new year"
           />
         </div>
+      </section>
+
+      <!-- Holiday sale section -->
+      <section class="holiday-sale">
+        <div class="sale-context">
+          <h6 class="sale-title">WHAT IS FUNCTIONAL</h6>
+          <h3 class="sale-details">
+            <span class="red-text">Holidays</span> Sale 50%
+          </h3>
+          <p class="sale-des">
+            Unlock the joy of the season with our New Year Holiday Sale! Enjoy a
+            spectacular 50% off on a wide range of products. From fashion to
+            electronics, treat yourself to incredible savings and start the year
+            in style. Hurry, this festive offer is too good to miss! 🎉✨
+          </p>
+        </div>
+        <img class="red-rec" src="Resources/Rectangle 2.png" alt="" />
+        <img
+          src="Resources/Rectangle 1.png"
+          alt="A woman is holding shopping bags"
+          class="visual-person"
+        />
+        <img src="Resources/Group 44.png" alt="" class="visual-50per" />
+        <img class="visual-gift" src="Resources/Group 75.png" alt="" />
       </section>
     </main>
   </body>
