added gift section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,29 @@
         <img src="Resources/Group 44.png" alt="" class="visual-50per" />
         <img class="visual-gift" src="Resources/Group 75.png" alt="" />
       </section>
+
+      <!-- Gift section -->
+      <section class="gift-section">
+        <h6 class="gift-title">THE BEST GIFTS</h6>
+        <h3 class="gift-details">Our Awesome Portfolio</h3>
+        <p class="gift-des">
+          elebrate the New Year with gratitude! Enjoy our special gifts for
+          valued customers. A token of appreciation to thank you for your
+          loyalty. Cheers to a wonderful year ahead!
+        </p>
+        <div class="gift-container">
+          <img src="Resources/Rectangle 3.png" alt="Women's bag" /><img
+            src="Resources/Rectangle 4.png"
+            alt="Women's bag"
+          /><img src="Resources/Rectangle 5.png" alt="Women's shoe" /><img
+            src="Resources/Rectangle 6.png"
+            alt="Women's shoe"
+          /><img src="Resources/Rectangle 7.png" alt="Women's Sunglass" /><img
+            src="Resources/Rectangle 8.png"
+            alt="Rings"
+          />
+        </div>
+      </section>
     </main>
   </body>
 </html>
