added newsletter section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,27 @@
           />
         </div>
       </section>
+      <section class="newsletter-section">
+        <img
+          src="Resources/Group 61.png"
+          alt="Letter icon"
+          class="letter-icon"
+        />
+        <h3 class="newsletter-title">Subscribe Newsletter</h3>
+        <p class="newsletter-des">
+          Stay in the loop! Subscribe to our newsletter for exclusive discounts
+          and updates on great deals. Don't miss out on the latest offers and
+          savings. Join now!
+        </p>
+        <div class="input-area">
+          <input
+            class="email-input"
+            type="email"
+            placeholder="Please enter your email here"
+          />
+          <button class="subscribe-btn">Subscribe</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
