added footer section

--- a/index.html
+++ b/index.html
@@ -145,5 +145,55 @@
         </div>
       </section>
     </main>
+
+    <!-- Footer section -->
+    <footer>
+      <div class="footer-content">
+        <p class="footer-address">
+          44, Big Building Roosevelt Street <br />
+          Beach Gardens Florida 33410
+        </p>
+        <img class="call-icon" src="Resources/Call.png" alt="Call icon" />
+        <a href="#" class="footer-number">+00 123 584 124</a>
+        <img class="web-icon" src="Resources/Website.png" alt="Website icon" />
+        <a href="#" class="footer-website">www.website.com</a>
+
+        <hr class="hr01" />
+
+        <div class="footer-socials">
+          <a href="#"
+            ><img
+              src="Resources/Facebook.png"
+              alt="Facebook icon"
+              class="social-icon"
+          /></a>
+          <a href="#"
+            ><img
+              src="Resources/Instagram.png"
+              alt="Instagram icon"
+              class="social-icon"
+          /></a>
+          <a href="#"
+            ><img
+              src="Resources/Twitter.png"
+              alt="Twitter icon"
+              class="social-icon"
+          /></a>
+          <a href="#"
+            ><img
+              src="Resources/Linkedin.png"
+              alt="Linkedin icon"
+              class="social-icon"
+          /></a>
+        </div>
+
+        <hr class="hr02" />
+
+        <p class="footer-copyright">
+          &copy; 2024 Irfan Rahman | All Rights Reserved.
+        </p>
+        <button class="unsubscribe-btn">Unsubscribe</button>
+      </div>
+    </footer>
   </body>
 </html>
