--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>New Year New Mission</title>
   </head>
   <body>
+    <!-- Header section -->
     <header>
       <h3 class="banner-title">Happy New Year</h3>
       <h1 class="banner-description">New Year Party <br />Celebration</h1>
     </header>
     <main>
+      <!-- Offer section -->
       <section class="offer-section">
         <h1 class="offer-title">65% OFF</h1>
         <h6 class="offer-des1">OUR HOLIDAY DEALS ARE BETTER</h6>
@@ -22,6 +24,8 @@
           alt="Happy new year"
         />
       </section>
+
+      <!-- Party section -->
       <section class="party-section">
         <div class="party-text">
           <h1 class="party-title">
@@ -37,6 +41,8 @@
         </div>
         <img class="img-2024" src="Resources/Group 70.png" alt="2024" />
       </section>
+
+      <!-- Party details section -->
       <section class="party-details">
         <p class="detail-info">
           <span class="red-text"> Place: </span> New Park Hotel <br />
@@ -123,6 +129,8 @@
           />
         </div>
       </section>
+
+      <!-- Newsletter section -->
       <section class="newsletter-section">
         <img
           src="Resources/Group 61.png"
